[tool.poetry]
name = "p-web-2-11"
version = "0.1.0"
description = ""
authors = ["Hlushchenko"]
readme = "README.md"
packages = [{include = "p"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^2.0.3"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.4"
pydantic = "^1.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
